[package]
name = "oci-spec"
version = "0.7.0"
edition = "2021"
authors = [
    "Furisto",
    "Sascha Grunert <sgrunert@redhat.com>",
    "Toru Komatsu <k0ma@utam0k.jp>",
]
description = "Open Container Initiative Specifictions in Rust"
documentation = "https://docs.rs/oci-spec"
readme = "README.md"
homepage = "https://github.com/containers/oci-spec-rs"
repository = "https://github.com/containers/oci-spec-rs"
license = "Apache-2.0"
keywords = ["oci", "spec", "container", "runtime", "image"]
categories = ["api-bindings"]

[workspace]

[features]
default = ["distribution", "image", "runtime"]
proptests = ["quickcheck"]
distribution = []
image = []
runtime = []

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.68"
serde_json = "1.0.132"
quickcheck = { version = "1.0.3", optional = true }
derive_builder = "0.20.2"
getset = "0.1.3"
strum = "0.26.3"
strum_macros = "0.26.4"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.13.0"
rstest = "0.23.0"
serde_json = { version = "1.0.132", features = ["preserve_order"] }
